<resources>
    <string name="app_name">Fabrikal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_shop">ShopActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fabrikal">Fabrikal</string>
    <string name="shoes">Shoes</string>
    <string name="entrar">ENTRAR</string>
    <string name="women_s">Women\'s</string>
    <string name="login">Iniciar sesión con tu email</string>
    <string name="eres_nuevo_por_ac">¿Eres nuevo por acá?</string>
    <string name="registrate_aqui">Registrate aquí</string>
    <string name="ingresar">Ingresar</string>
    <string name="atras">atras</string>
    <string name="atras1">atras1</string>
    <string name="atras2">atras2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonCamara">Fabrikal</string>
</resources>